[tool.poetry]
name = "vivintpy"
version = "0.0.0"
description = "Python library for interacting with a Vivint security and smart home system."
authors = ["Nathan Spencer <natekspencer@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/natekspencer/vivintpy"
repository = "https://github.com/natekspencer/vivintpy"
keywords = ["Vivint", "alarm system", "security", "smart home", "home automation", "asynchronous"]

[tool.poetry.dependencies]
python = "^3.9.0"
aiohttp = "^3.12.6"
certifi = ">=2022.9.24,<2026.0.0"
pubnub = ">=10.4.0"
grpcio = "^1.73.0"
protobuf = "6.31.1"
pyjwt = "^2.9.0"
pydantic = "^2.11.5"
fastapi = "^0.110.0"
email-validator = "^2.2.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
aiofiles = "^24.1.0"
python-multipart = "^0.0.20"
pydantic-settings = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = {extras = ["hiredis"], version = "^5.0.1"}

[tool.poetry.group.dev.dependencies]
tox = ">=3.28,<5.0"
pytest = ">=7.2.2,<9.0.0"
pytest-asyncio = ">=0.21,<0.27"
pytest-cov = ">=4,<7"
pytest-timeout = "^2.1.0"
mypy = "^1.4"
grpcio-tools = ">=1.62.3,<2"
ruff = ">=0.5.0,<0.12"
httpx = ">=0.28,<0.29"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "default-unprefixed"

[tool.pytest.ini_options]
addopts = ["--cov=./"]

[tool.coverage.run]
omit = ["*/proto/*", "*/tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
